# ml_sandbox

algorithms/nn/: CMakeLists.txt  nn.cpp  nn.h  nn_test.cpp
algorithms/sgd/: CMakeLists.txt  sgd.cpp  sgd.h
docs/: README.md
